# stronglytyped-systems

./: .gitignore  Cargo.toml  build.rs  package-lock.json
content/posts/: agent-swarms-and-sprint-factories.md  building-coself.md  dark-factories-and-personal-ai.md  debate-as-error-correction.md  why-i-built-coself.md
public/: parallax.js
public/demos/: assistant.html  conversation.html  cubesim.html  dashboard.html  qwerkey.html  rektangle.html  sferrakl.html  sprint-kanban.html  sprint-lifecycle.html  trip.html
src/: app.rs  lib.rs  main.rs  posts.rs
src/components/: footer.rs  mod.rs  nav.rs  post_card.rs  project_card.rs  tag_badge.rs
src/pages/: about.rs  blog.rs  contact.rs  hire_me.rs  home.rs  mod.rs  projects.rs
style/: blog.css  cards.css  hero.css  layout.css  main.css  nav.css  pages.css  reset.css  typography.css  utilities.css  variables.css
