[package]
name = "stronglytyped-systems"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stronglytyped-systems"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.7", features = [] }
leptos_router = { version = "0.7", features = [] }
leptos_meta = { version = "0.7", features = [] }
leptos_axum = { version = "0.7", optional = true }
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
http = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "CssStyleDeclaration", "AddEventListenerOptions"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[build-dependencies]
pulldown-cmark = "0.13"
syntect = "5"
gray_matter = "0.2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:web-sys",
]
ssr = [
    "leptos/ssr",
    "leptos_router/ssr",
    "leptos_meta/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:http",
    "dep:tracing",
]

[package.metadata.leptos]
output-name = "stronglytyped-systems"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
end2end-cmd = ""
browserquery = "defaults"
bin-features = ["ssr"]
bin-default-features = false
watch-additional-files = ["style"]
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
